--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<title>Page Title</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-</style>
-</head>
-<body>
-
-<h1>My Website</h1>
-<p>A website created by me.</p>
-
-</body>
+<html>
+   <head>
+      <title>My Cool Website</title>
+   </head>
+   <body>
+      <h1>Welcome to my website! ⭐️</h1>
+      <p>How was your day? 🎉</p>
+      <a href="./about">Read the about page</a>
+   </body>
 </html>
