--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OPZ Project Privacy Policy</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
     <h1>OPZ Project Privacy Policy</h1>
   </header>
+
   <main>
     <p>Your privacy is important to us. This Privacy Policy outlines how we collect, use, disclose, and protect your personal information when you interact with the OPZ Project. By using the OPZ Project, you consent to the practices described in this Privacy Policy.</p>
 
@@ -33,10 +35,10 @@
     <h2>Contact Us</h2>
     <p>If you have any questions, concerns, or requests regarding this Privacy Policy or the handling of your personal information, please contact us at [insert contact information].</p>
   </main>
+
   <footer>
     <p>© 2023 OPZ Project. All rights reserved.</p>
   </footer>
 </body>
 </html>
-
 
