--- a/index.html
+++ b/index.html
@@ -1,44 +1,65 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OPZ Project Privacy Policy</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <header>
     <h1>OPZ Project Privacy Policy</h1>
   </header>
 
   <main>
-    <p>Your privacy is important to us. This Privacy Policy outlines how we collect, use, disclose, and protect your personal information when you interact with the OPZ Project. By using the OPZ Project, you consent to the practices described in this Privacy Policy.</p>
+    <p>Your privacy is important to us. This Privacy Policy outlines how we collect, use, disclose, and protect your
+      personal information when you interact with the OPZ Project. By using the OPZ Project, you consent to the
+      practices described in this Privacy Policy.</p>
+      
+    <div class="card">
+      <h2>Information We Collect</h2>
+      <p>We may collect personal information that you voluntarily provide to us when using the OPZ Project. This may
+        include contact information and financial information necessary for conducting transactions within the
+        project. Additionally, we may collect non-personal information such as device information and usage data to
+        improve the performance and functionality of the OPZ Project.</p>
+    </div>
 
-    <h2>Information We Collect</h2>
-    <p>We may collect personal information that you voluntarily provide to us when using the OPZ Project. This may include contact information and financial information necessary for conducting transactions within the project. Additionally, we may collect non-personal information such as device information and usage data to improve the performance and functionality of the OPZ Project.</p>
 
-    <h2>Use of Information</h2>
-    <p>We use the collected information to provide and maintain the OPZ Project, process transactions, optimize the project's performance, and communicate with you regarding updates or relevant information. We may disclose your personal information in certain circumstances, including with your consent or to comply with legal obligations.</p>
+        <h2>Use of Information</h2>
+        <p>We use the collected information to provide and maintain the OPZ Project, process transactions, optimize the
+          project's performance, and communicate with you regarding updates or relevant information. We may disclose
+          your personal information in certain circumstances, including with your consent or to comply with legal
+          obligations.</p>
 
-    <h2>Security</h2>
-    <p>We implement appropriate measures to protect the security and confidentiality of your personal information. However, please be aware that no method of transmission or storage can guarantee absolute security.</p>
+        <h2>Security</h2>
+        <p>We implement appropriate measures to protect the security and confidentiality of your personal information.
+          However, please be aware that no method of transmission or storage can guarantee absolute security.</p>
 
-    <h2>Third-Party Services</h2>
-    <p>The OPZ Project may integrate with third-party services. These services have their own privacy policies, and we encourage you to review them before using their services. We are not responsible for the privacy practices of these third-party services.</p>
+        <h2>Third-Party Services</h2>
+        <p>The OPZ Project may integrate with third-party services. These services have their own privacy policies, and
+          we encourage you to review them before using their services. We are not responsible for the privacy practices
+          of these third-party services.</p>
 
-    <h2>Children's Privacy</h2>
-    <p>The OPZ Project is not intended for use by individuals under the age of 18. We do not knowingly collect personal information from children. If you believe that we have inadvertently collected personal information from a child, please contact us, and we will take steps to delete the information.</p>
+        <h2>Children's Privacy</h2>
+        <p>The OPZ Project is not intended for use by individuals under the age of 18. We do not knowingly collect
+          personal information from children. If you believe that we have inadvertently collected personal information
+          from a child, please contact us, and we will take steps to delete the information.</p>
 
-    <h2>Changes to this Privacy Policy</h2>
-    <p>We may update this Privacy Policy from time to time. Any changes will be effective upon posting the revised Privacy Policy on the OPZ Project. We encourage you to review this Privacy Policy periodically for any updates.</p>
+        <h2>Changes to this Privacy Policy</h2>
+        <p>We may update this Privacy Policy from time to time. Any changes will be effective upon posting the revised
+          Privacy Policy on the OPZ Project. We encourage you to review this Privacy Policy periodically for any
+          updates.</p>
 
-    <h2>Contact Us</h2>
-    <p>If you have any questions, concerns, or requests regarding this Privacy Policy or the handling of your personal information, please contact us at [insert contact information].</p>
+        <h2>Contact Us</h2>
+        <p>If you have any questions, concerns, or requests regarding this Privacy Policy or the handling of your
+          personal information, please contact us at [insert contact information].</p>
   </main>
 
   <footer>
     <p>© 2023 OPZ Project. All rights reserved.</p>
   </footer>
 </body>
-</html>
 
+</html>
