--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <style>
   .card {
-    width: 300px;
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 10px;
@@ -48,35 +47,48 @@
         improve the performance and functionality of the OPZ Project.</p>
     </div>
 
+    <div class="card">
+      <h2>Use of Information</h2>
+      <p>We use the collected information to provide and maintain the OPZ Project, process transactions, optimize the
+        project's performance, and communicate with you regarding updates or relevant information. We may disclose
+        your personal information in certain circumstances, including with your consent or to comply with legal
+        obligations.</p>
+    </div>
 
-    <h2>Use of Information</h2>
-    <p>We use the collected information to provide and maintain the OPZ Project, process transactions, optimize the
-      project's performance, and communicate with you regarding updates or relevant information. We may disclose
-      your personal information in certain circumstances, including with your consent or to comply with legal
-      obligations.</p>
+    <div class="card">
+      <h2>Security</h2>
+      <p>We implement appropriate measures to protect the security and confidentiality of your personal information.
+        However, please be aware that no method of transmission or storage can guarantee absolute security.</p>
 
-    <h2>Security</h2>
-    <p>We implement appropriate measures to protect the security and confidentiality of your personal information.
-      However, please be aware that no method of transmission or storage can guarantee absolute security.</p>
+    </div>
 
-    <h2>Third-Party Services</h2>
-    <p>The OPZ Project may integrate with third-party services. These services have their own privacy policies, and
-      we encourage you to review them before using their services. We are not responsible for the privacy practices
-      of these third-party services.</p>
+    <div class="card">
+      <h2>Third-Party Services</h2>
+      <p>The OPZ Project may integrate with third-party services. These services have their own privacy policies, and
+        we encourage you to review them before using their services. We are not responsible for the privacy practices
+        of these third-party services.</p>
+    </div>
 
-    <h2>Children's Privacy</h2>
-    <p>The OPZ Project is not intended for use by individuals under the age of 18. We do not knowingly collect
-      personal information from children. If you believe that we have inadvertently collected personal information
-      from a child, please contact us, and we will take steps to delete the information.</p>
+    <div class="card">
+      <h2>Children's Privacy</h2>
+      <p>The OPZ Project is not intended for use by individuals under the age of 18. We do not knowingly collect
+        personal information from children. If you believe that we have inadvertently collected personal information
+        from a child, please contact us, and we will take steps to delete the information.</p>
+    </div>
 
-    <h2>Changes to this Privacy Policy</h2>
-    <p>We may update this Privacy Policy from time to time. Any changes will be effective upon posting the revised
-      Privacy Policy on the OPZ Project. We encourage you to review this Privacy Policy periodically for any
-      updates.</p>
+    <div class="card">
+      <h2>Changes to this Privacy Policy</h2>
+      <p>We may update this Privacy Policy from time to time. Any changes will be effective upon posting the revised
+        Privacy Policy on the OPZ Project. We encourage you to review this Privacy Policy periodically for any
+        updates.</p>
+    </div>
 
-    <h2>Contact Us</h2>
-    <p>If you have any questions, concerns, or requests regarding this Privacy Policy or the handling of your
-      personal information, please contact us at [insert contact information].</p>
+    <div class="card">
+      <h2>Contact Us</h2>
+      <p>If you have any questions, concerns, or requests regarding this Privacy Policy or the handling of your
+        personal information, please contact us at [insert contact information].</p>
+    </div>
+
   </main>
 
   <footer>
