--- a/index.html
+++ b/index.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
 <html>
+
 <style>
-  .card {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px;
-    background-color: #f9f9f9;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
+.content-card {
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 40px;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 
-  .card h2 {
-    color: #333;
-    font-size: 20px;
-    margin-top: 0;
-  }
+.content-card h2 {
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
 
-  .card p {
-    color: #666;
-    font-size: 14px;
-  }
+.content-card h3 {
+  font-size: 20px;
+  font-weight: normal;
+  color: #666;
+  margin-bottom: 30px;
+}
+
+.content-card img {
+  width: 100%;
+  max-width: 600px;
+  height: auto;
+  margin-bottom: 30px;
+}
+
+.content-card p {
+  font-size: 16px;
+  line-height: 1.6;
+}
+
 </style>
 
 <head>
@@ -39,7 +56,7 @@
       personal information when you interact with the OPZ Project. By using the OPZ Project, you consent to the
       practices described in this Privacy Policy.</p>
 
-    <div class="card">
+    <div class="content-card">
       <h2>Information We Collect</h2>
       <p>We may collect personal information that you voluntarily provide to us when using the OPZ Project. This may
         include contact information and financial information necessary for conducting transactions within the
@@ -47,7 +64,7 @@
         improve the performance and functionality of the OPZ Project.</p>
     </div>
 
-    <div class="card">
+    <div class="content-card">
       <h2>Use of Information</h2>
       <p>We use the collected information to provide and maintain the OPZ Project, process transactions, optimize the
         project's performance, and communicate with you regarding updates or relevant information. We may disclose
@@ -55,35 +72,35 @@
         obligations.</p>
     </div>
 
-    <div class="card">
+    <div class="content-card">
       <h2>Security</h2>
       <p>We implement appropriate measures to protect the security and confidentiality of your personal information.
         However, please be aware that no method of transmission or storage can guarantee absolute security.</p>
 
     </div>
 
-    <div class="card">
+    <div class="content-card">
       <h2>Third-Party Services</h2>
       <p>The OPZ Project may integrate with third-party services. These services have their own privacy policies, and
         we encourage you to review them before using their services. We are not responsible for the privacy practices
         of these third-party services.</p>
     </div>
 
-    <div class="card">
+    <div class="content-card">
       <h2>Children's Privacy</h2>
       <p>The OPZ Project is not intended for use by individuals under the age of 18. We do not knowingly collect
         personal information from children. If you believe that we have inadvertently collected personal information
         from a child, please contact us, and we will take steps to delete the information.</p>
     </div>
 
-    <div class="card">
+    <div class="content-card">
       <h2>Changes to this Privacy Policy</h2>
       <p>We may update this Privacy Policy from time to time. Any changes will be effective upon posting the revised
         Privacy Policy on the OPZ Project. We encourage you to review this Privacy Policy periodically for any
         updates.</p>
     </div>
 
-    <div class="card">
+    <div class="content-card">
       <h2>Contact Us</h2>
       <p>If you have any questions, concerns, or requests regarding this Privacy Policy or the handling of your
         personal information, please contact us at [insert contact information].</p>
