--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
   </header>
 
   <main>
-    <p>Your privacy is important to us. This Privacy Policy outlines how we collect, use, disclose, and protect your
-      personal information when you interact with the OPZ Project. By using the OPZ Project, you consent to the
-      practices described in this Privacy Policy.</p>
+
+    <div class="content-card">
+      <p>Your privacy is important to us. This Privacy Policy outlines how we collect, use, disclose, and protect your
+        personal information when you interact with the OPZ Project. By using the OPZ Project, you consent to the
+        practices described in this Privacy Policy.</p>
+    </div>
 
     <div class="content-card">
       <h2>Information We Collect</h2>
@@ -109,7 +112,11 @@
   </main>
 
   <footer>
-    <p>© 2023 OPZ Project. All rights reserved.</p>
+
+    <div class="content-card">
+      <p>© 2023 OPZ Project. All rights reserved.</p>
+    </div>
+
   </footer>
 </body>
 
